# ESP32-S3_ESP-IDF_COMPONENTS

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  platformio.ini  sdkconfig.esp32s3box
.github/instructions/: codacy.instructions.md
components/peripherals/: README.md
components/peripherals/adc/: README.md
components/peripherals/i2c/: README.md
components/peripherals/owb/: README.md
components/peripherals/spi/: README.md
components/schedule/esp_time_into_interval/: README.md  idf_component.yml  library.json  time_into_interval.c
components/storage/esp_datalogger/: README.md  datatable.c  idf_component.yml  library.json
components/storage/esp_nvs_ext/: README.md  idf_component.yml  library.json
components/utilities/: README.md
components/utilities/esp_cla/: CMakeLists.txt  README.md  cla.c  cla_common.c  cla_filter.c  cla_matrix.c  cla_vector.c  matrix.c  (+3 more)
include/: app_config.h  max30105_task.h  scalar_trend_task.h  tcs3472_task.h
src/: CMakeLists.txt  ahtxx_task.c  ak8975_task.c  as3935_task.c  as7341_task.c  at24cxxx_task.c  bh1750_task.c  bme680_task.c  bmp280_task.c  bmp390_task.c  ds18b20_task.c  hdc1080_task.c  hmc5883l_task.c  ina226_task.c  ina228_task.c  ltr390uv_task.c  main.c  max30105_task.c  mlx90614_task.c  mmc56x3_task.c  pct2075_task.c  scalar_trend_task.c  sgp4x_task.c  sht4x_task.c  ssd1306_task.c  tcs3472_task.c  time_into_interval_task.c  tlv493d_task.c  veml6040_task.c  veml7700_task.c
templates/: README_TMP.md
vers/: config.py
vscode - copy/: c_cpp_properties.json  settings.json
(+294 files in other folders)
